--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: AdvancedPerks
-version: 1.0.0
+version: 1.0.0-SNAPSHOT
 api: 1.0.0
 author: Mundschutziii
 main: net.lldv.advancedperks.AdvancedPerks
