added new perks
1.1.0 ready

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,5 @@
 Commands:
-  Perks: "perks"
-  PerksDescription: "Perks for players"
+  Perks:
+    Name: "perks"
+    Description: "Special perks for players"
+    Aliases: [ "perkui" ]
