--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -21,3 +21,6 @@ perk-menu-waterbreathing: "&aWater breathing\n[0]"
 perk-menu-fastbreak: "&bFast block break\n[0]"
 perk-menu-keepxp: "&9Keep experience\n[0]"
 perk-menu-keepinventory: "&5Keep inventory\n[0]"
+perk-menu-strength: "&4Strength\n[0]"
+perk-menu-regeneration: "&cRegeneration\n[0]"
+perk-menu-doublexp: "&6Double experience\n[0]"
